--- a/data/definitions/characters.yaml
+++ b/data/definitions/characters.yaml
@@ -2,12 +2,12 @@ name: char
 aliases: [CHAR]
 type: character
 attributes:
-- size: 1
+  size: 1
   units: byte
 ---
 name: wchar
 aliases: [WCHAR]
 type: character
 attributes:
-- size: [2, 4]
+  size: [2, 4]
   units: byte
