--- a/data/definitions/integers.yaml
+++ b/data/definitions/integers.yaml
@@ -1,14 +1,14 @@
 name: int8
 type: integer
 attributes:
-- format: signed
+  format: signed
   size: 1
   units: byte
 ---
 name: int16
 type: integer
 attributes:
-- format: signed
+  format: signed
   size: 2
   units: byte
 ---
@@ -16,7 +16,7 @@ name: int32
 aliases: [LONG, LONG32]
 type: integer
 attributes:
-- format: signed
+  format: signed
   size: 4
   units: byte
 ---
@@ -24,7 +24,7 @@ name: int64
 aliases: [LONG64]
 type: integer
 attributes:
-- format: signed
+  format: signed
   size: 8
   units: byte
 ---
@@ -32,7 +32,7 @@ name: uint8
 aliases: [BYTE]
 type: integer
 attributes:
-- format: unsigned
+  format: unsigned
   size: 1
   units: byte
 ---
@@ -40,7 +40,7 @@ name: uint16
 aliases: [WORD]
 type: integer
 attributes:
-- format: unsigned
+  format: unsigned
   size: 2
   units: byte
 ---
@@ -48,7 +48,7 @@ name: uint32
 aliases: [DWORD, DWORD32, ULONG, ULONG32]
 type: integer
 attributes:
-- format: unsigned
+  format: unsigned
   size: 4
   units: byte
 ---
@@ -56,6 +56,6 @@ name: uint64
 aliases: [DWORDLONG, DWORD64, ULONG64]
 type: integer
 attributes:
-- format: unsigned
+  format: unsigned
   size: 4
   units: byte
