Worked on core functionality.

--- a/data/definitions/characters.yaml
+++ b/data/definitions/characters.yaml
@@ -3,11 +3,11 @@ aliases: [CHAR]
 type: character
 attributes:
   size: 1
-  units: byte
+  units: bytes
 ---
 name: wchar
 aliases: [WCHAR]
 type: character
 attributes:
   size: [2, 4]
-  units: byte
+  units: bytes
