--- a/data/definitions/integers.yaml
+++ b/data/definitions/integers.yaml
@@ -3,14 +3,14 @@ type: integer
 attributes:
   format: signed
   size: 1
-  units: byte
+  units: bytes
 ---
 name: int16
 type: integer
 attributes:
   format: signed
   size: 2
-  units: byte
+  units: bytes
 ---
 name: int32
 aliases: [LONG, LONG32]
@@ -18,7 +18,7 @@ type: integer
 attributes:
   format: signed
   size: 4
-  units: byte
+  units: bytes
 ---
 name: int64
 aliases: [LONG64]
@@ -26,7 +26,7 @@ type: integer
 attributes:
   format: signed
   size: 8
-  units: byte
+  units: bytes
 ---
 name: uint8
 aliases: [BYTE]
@@ -34,7 +34,7 @@ type: integer
 attributes:
   format: unsigned
   size: 1
-  units: byte
+  units: bytes
 ---
 name: uint16
 aliases: [WORD]
@@ -42,7 +42,7 @@ type: integer
 attributes:
   format: unsigned
   size: 2
-  units: byte
+  units: bytes
 ---
 name: uint32
 aliases: [DWORD, DWORD32, ULONG, ULONG32]
@@ -50,7 +50,7 @@ type: integer
 attributes:
   format: unsigned
   size: 4
-  units: byte
+  units: bytes
 ---
 name: uint64
 aliases: [DWORDLONG, DWORD64, ULONG64]
@@ -58,4 +58,4 @@ type: integer
 attributes:
   format: unsigned
   size: 4
-  units: byte
+  units: bytes
