--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ matrix:
   - os: osx
     language: generic
 install:
+  - pip install -r requirements.txt
   - ./config/travis/install.sh
 script:
   - if test `uname -s` = 'Linux' && test ${TRAVIS_PYTHON_VERSION} = "2.7"; then coverage run --source=dtfabric --omit="*_test*,*__init__*,*test_lib*" ./run_tests.py; else ./run_tests.py; fi
