Worked on core functionality.

--- a/data/definitions/integers.yaml
+++ b/data/definitions/integers.yaml
@@ -1,5 +1,6 @@
 name: int8
 type: integer
+description: 8-bit signed integer type
 attributes:
   format: signed
   size: 1
@@ -7,6 +8,7 @@ attributes:
 ---
 name: int16
 type: integer
+description: 16-bit signed integer type
 attributes:
   format: signed
   size: 2
@@ -15,6 +17,7 @@ attributes:
 name: int32
 aliases: [LONG, LONG32]
 type: integer
+description: 32-bit signed integer type
 attributes:
   format: signed
   size: 4
@@ -23,6 +26,7 @@ attributes:
 name: int64
 aliases: [LONG64]
 type: integer
+description: 64-bit signed integer type
 attributes:
   format: signed
   size: 8
@@ -31,6 +35,7 @@ attributes:
 name: uint8
 aliases: [BYTE]
 type: integer
+description: 8-bit unsigned integer type
 attributes:
   format: unsigned
   size: 1
@@ -39,6 +44,7 @@ attributes:
 name: uint16
 aliases: [WORD]
 type: integer
+description: 16-bit unsigned integer type
 attributes:
   format: unsigned
   size: 2
@@ -47,6 +53,7 @@ attributes:
 name: uint32
 aliases: [DWORD, DWORD32, ULONG, ULONG32]
 type: integer
+description: 32-bit unsigned integer type
 attributes:
   format: unsigned
   size: 4
@@ -55,6 +62,7 @@ attributes:
 name: uint64
 aliases: [DWORDLONG, DWORD64, ULONG64]
 type: integer
+description: 64-bit unsigned integer type
 attributes:
   format: unsigned
   size: 8
