--- a/test_data/definitions/characters.yaml
+++ b/test_data/definitions/characters.yaml
@@ -11,6 +11,7 @@ aliases: [WCHAR]
 type: character
 description: 16-bit wide character type
 attributes:
+  byte_order: little-endian
   size: 2
   units: bytes
 ---
@@ -18,5 +19,6 @@ name: wchar32
 type: character
 description: 32-bit wide character type
 attributes:
+  byte_order: little-endian
   size: 4
   units: bytes
