--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,8 +2,12 @@ include ACKNOWLEDGEMENTS LICENSE README
 include run_tests.py
 exclude .gitignore
 exclude *.pyc
-recursive-exclude config *
+recursive-include config *
+recursive-include data *.yaml
 recursive-exclude dtfabric *.pyc
+recursive-include scripts *.py
+recursive-exclude scripts *.pyc
+recursive-include test_data *
 # The test scripts are not required in a binary distribution package they 
 # are considered source distribution files and excluded in find_package()
 # in setup.py.
