--- a/test_data/structure.yaml
+++ b/test_data/structure.yaml
@@ -9,7 +9,7 @@ attributes:
 name: point3d
 aliases: [POINT]
 type: structure
-description: Point in 3 dimentional space.
+description: Point in 3 dimensional space.
 attributes:
   byte_order: little-endian
 members:
@@ -23,7 +23,7 @@ members:
 ---
 name: triangle3d
 type: structure
-description: Triangle in 3 dimentional space.
+description: Triangle in 3 dimensional space.
 members:
 - name: a
   data_type: point3d
@@ -34,7 +34,7 @@ members:
 ---
 name: box3d
 type: structure
-description: Sphere in 3 dimentional space.
+description: Box in 3 dimensional space.
 members:
 - name: triangles
   type: sequence
@@ -43,11 +43,11 @@ members:
 ---
 name: sphere3d
 type: structure
-description: Sphere in 3 dimentional space.
+description: Sphere in 3 dimensional space.
 members:
 - name: number_of_triangles
   data_type: int32
 - name: triangles
   type: sequence
   element_data_type: triangle3d
-  number_of_elements: 3
+  number_of_elements: sphere3d.number_of_triangles
