Worked on tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,7 @@
 release = 1
 packager = Joachim Metz <joachim.metz@gmail.com>
 doc_files = ACKNOWLEDGEMENTS
+            AUTHORS
             LICENSE
             README
 build_requires = python-setuptools
