--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-include ACKNOWLEDGEMENTS AUTHORS LICENSE README
+include AUTHORS LICENSE README
 include run_tests.py
 exclude .gitignore
 exclude *.pyc
