--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,6 @@
 [bdist_rpm]
 release = 1
 packager = Joachim Metz <joachim.metz@gmail.com>
-doc_files = ACKNOWLEDGEMENTS
-            AUTHORS
-            LICENSE
-            README
+doc_files = AUTHORS LICENSE README
 build_requires = python-setuptools
 requires = PyYAML >= 3.10
