--- a/dtfabric.ini
+++ b/dtfabric.ini
@@ -1,5 +1,6 @@
 [project]
 name: dtfabric
+name_description: dtFabric
 maintainer: Joachim Metz <joachim.metz@gmail.com>
 homepage_url: https://github.com/libyal/dtfabric
 description_short: Data type fabric (dtfabric)
