--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,8 @@
 [bdist_rpm]
 release = 1
 packager = Joachim Metz <joachim.metz@gmail.com>
-doc_files = AUTHORS LICENSE README
+doc_files = AUTHORS
+            LICENSE
+            README
 build_requires = python-setuptools
 requires = PyYAML >= 3.10
