--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,7 @@ doc_files = ACKNOWLEDGEMENTS
             LICENSE
             README
 build_requires = python-setuptools
-requires = PyYAML >= 3.10
+requires = python2-pyyaml >= 3.10
 
 [bdist_wheel]
 universal = 1
