--- a/test_data/string_array.yaml
+++ b/test_data/string_array.yaml
@@ -29,3 +29,15 @@ members:
   type: sequence
   element_data_type: cstring
   number_of_elements: string_array.number_of_strings
+---
+name: string_array_with_size
+type: structure
+attributes:
+  byte_order: little-endian
+members:
+- name: strings_data_size
+  data_type: uint32
+- name: strings
+  type: sequence
+  element_data_type: cstring
+  elements_data_size: string_array_with_size.strings_data_size
