--- a/dtfabric.ini
+++ b/dtfabric.ini
@@ -4,6 +4,7 @@ status: alpha
 name_description: dtFabric
 maintainer: Joachim Metz <joachim.metz@gmail.com>
 homepage_url: https://github.com/libyal/dtfabric
+git_url: https://github.com/libyal/dtfabric.git
 description_short: Data type fabric (dtfabric)
 description_long: dtFabric, or data type fabric, is a project to manage data types and
     structures, as used in the libyal projects.
