--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ doc_files = ACKNOWLEDGEMENTS
             AUTHORS
             LICENSE
             README
-build_requires = python-setuptools
+build_requires = python2-setuptools
 requires = python2-pyyaml >= 3.10
 
 [bdist_wheel]
