--- a/config/dpkg/control
+++ b/config/dpkg/control
@@ -2,18 +2,10 @@ Source: dtfabric
 Section: python
 Priority: extra
 Maintainer: Joachim Metz <joachim.metz@gmail.com>
-Build-Depends: debhelper (>= 9), dh-python, python-all (>= 2.7~), python-setuptools, python3-all (>= 3.4~), python3-setuptools
-Standards-Version: 3.9.5
-X-Python-Version: >= 2.7
-X-Python3-Version: >= 3.4
+Build-Depends: debhelper (>= 9), dh-python, python3-all (>= 3.5~), python3-setuptools
+Standards-Version: 4.1.4
+X-Python3-Version: >= 3.5
 Homepage: https://github.com/libyal/dtfabric
-
-Package: python-dtfabric
-Architecture: all
-Depends: python-yaml (>= 3.10), ${python:Depends}, ${misc:Depends}
-Description: Python 2 module of dtFabric
- dtFabric, or data type fabric, is a project to manage data types and
- structures, as used in the libyal projects.
 
 Package: python3-dtfabric
 Architecture: all
@@ -24,7 +16,7 @@ Description: Python 3 module of dtFabric
 
 Package: dtfabric-tools
 Architecture: all
-Depends: python-dtfabric (>= ${binary:Version}), ${python:Depends}, ${misc:Depends}
+Depends: python3-dtfabric (>= ${binary:Version}), ${python3:Depends}, ${misc:Depends}
 Description: Tools of dtFabric
  dtFabric, or data type fabric, is a project to manage data types and
  structures, as used in the libyal projects.
