--- a/test_data/structure_with_condition.yaml
+++ b/test_data/structure_with_condition.yaml
@@ -14,6 +14,8 @@ attributes:
 ---
 name: structure_with_condition
 type: structure
+attributes:
+  byte_order: little-endian
 members:
 - name: flags
   data_type: uint16
