--- a/test_data/structure_with_padding.yaml
+++ b/test_data/structure_with_padding.yaml
@@ -14,6 +14,8 @@ attributes:
 ---
 name: structure_with_padding
 type: structure
+attributes:
+  byte_order: little-endian
 members:
 - name: data_size
   data_type: uint16
@@ -23,6 +25,9 @@ members:
 ---
 name: structure_with_padding_and_stream
 type: structure
+attributes:
+  byte_order: little-endian
+members:
 members:
 - name: data_size
   data_type: uint16
