--- a/test_data/structure_with_string.yaml
+++ b/test_data/structure_with_string.yaml
@@ -14,6 +14,8 @@ attributes:
 ---
 name: utf16_string
 type: structure
+attributes:
+  byte_order: little-endian
 members:
 - name: size
   data_type: uint16
