Updated pylintrc configuration to version 2.9.x

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,7 @@
 include AUTHORS LICENSE README
+include dependencies.ini run_tests.py utils/__init__.py utils/dependencies.py
+include utils/check_dependencies.py
+include requirements.txt test_requirements.txt
 include run_tests.py
 exclude .gitignore
 exclude *.pyc
