--- a/config/dpkg/control
+++ b/config/dpkg/control
@@ -9,14 +9,14 @@ Homepage: https://github.com/libyal/dtfabric
 
 Package: python3-dtfabric
 Architecture: all
-Depends: python3-yaml (>= 3.10), ${python3:Depends}, ${misc:Depends}
+Depends: python3-yaml (>= 3.10), ${misc:Depends}
 Description: Python 3 module of dtFabric
  dtFabric, or data type fabric, is a project to manage data types and
  structures, as used in the libyal projects.
 
 Package: dtfabric-tools
 Architecture: all
-Depends: python3-dtfabric (>= ${binary:Version}), ${python3:Depends}, ${misc:Depends}
+Depends: python3-dtfabric (>= ${binary:Version}), ${misc:Depends}
 Description: Tools of dtFabric
  dtFabric, or data type fabric, is a project to manage data types and
  structures, as used in the libyal projects.
