Updated CI test configurations

--- a/test_data/enumeration.yaml
+++ b/test_data/enumeration.yaml
@@ -1,3 +1,5 @@
+# dtFabric format specification.
+---
 name: object_information_type
 aliases: [MINIDUMP_HANDLE_OBJECT_INFORMATION_TYPE]
 type: enumeration
