Changes for deployment

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,16 +1,47 @@
 [metadata]
-license_files = LICENSE
+name = dtfabric
+version = 20230506
+description = Data type fabric (dtfabric)
+long_description = dtFabric, or data type fabric, is a project to manage data types and structures, as used in the libyal projects.
+url = https://github.com/libyal/dtfabric
+maintainer = Joachim Metz
+maintainer_email = joachim.metz@gmail.com
+license = Apache License, Version 2.0
+license_files =
+  ACKNOWLEDGEMENTS
+  AUTHORS
+  LICENSE
+  README
+classifiers =
+  Development Status :: 3 - Alpha
+  Programming Language :: Python
+
+[options]
+install_requires = file:requirements.txt
+package_dir =
+  dtfabric = dtfabric
+packages = find:
+python_requires = >=3.7
+
+[options.packages.find]
+exclude =
+  docs
+  tests
+  tests.*
+  utils
+where = .
 
 [bdist_rpm]
 release = 1
 packager = Joachim Metz <joachim.metz@gmail.com>
-doc_files = ACKNOWLEDGEMENTS
-            AUTHORS
-            LICENSE
-            README
+doc_files =
+  ACKNOWLEDGEMENTS
+  AUTHORS
+  LICENSE
+  README
 build_requires = python3-setuptools
-requires = python3-pyyaml >= 3.10
+requires =
+  python3-pyyaml >= 3.10
 
 [bdist_wheel]
 universal = 1
-
