Changes for deployment

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,9 @@
 [metadata]
 name = dtfabric
-version = 20230506
+version = 20231227
 description = Data type fabric (dtfabric)
 long_description = dtFabric, or data type fabric, is a project to manage data types and structures, as used in the libyal projects.
+long_description_content_type = text/plain
 url = https://github.com/libyal/dtfabric
 maintainer = Joachim Metz
 maintainer_email = joachim.metz@gmail.com
@@ -22,6 +23,8 @@ package_dir =
   dtfabric = dtfabric
 packages = find:
 python_requires = >=3.7
+scripts =
+  scripts/validate-definitions.py
 
 [options.packages.find]
 exclude =
