--- a/tox.ini
+++ b/tox.ini
@@ -11,8 +11,7 @@ passenv =
 setenv =
   PYTHONPATH = {toxinidir}
 deps =
-  -rrequirements.txt
-  -rtest_requirements.txt
+  mock >= 2.0.0
   coverage: coverage
   wheel:
     build
@@ -43,13 +42,12 @@ passenv =
 setenv =
   PYTHONPATH = {toxinidir}
 deps =
-  -rrequirements.txt
-  -rtest_requirements.txt
+  mock >= 2.0.0
   pylint >= 3.3.0, < 3.4.0
   setuptools >= 65
   yamllint >= 1.26.0
 commands =
   pylint --version
   yamllint -v
-  pylint --rcfile=.pylintrc dtfabric scripts setup.py tests
+  pylint --rcfile=.pylintrc dtfabric tests
   yamllint -c .yamllint.yaml test_data
